--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
             <img src="images/grab.jpg" alt="grabbing" id="hand" class="hand-animation">
             <div id="object-display"></div>
         </div>
-        <button id="start-button">Reach Into Bag</button>
+        <button id="start-button">Unbox item.</button>
         <audio id="sound-unbox" src="sounds/unboxing.mp3"></audio>
 
     
-        <script src="script.java"></script>
+        <script src="scripts/script.java"></script>
     </body>
 
     
