--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <img src="images/grab.jpg" alt="grabbing" id="hand" class="hand-animation">
             <div id="object-display"></div>
         </div>
-        <button id="start-button" onclick="randomizer()">Unbox item.</button>
+        <button class="button"id="start-button" onclick="otherfunc()">Unbox item.</button>
         <audio id="sound-unbox" src="sounds/unboxing.mp3"></audio>
     </body>
 
